# pitch.me

./: .gitignore  .replit  README.md  pyproject.toml  render.yaml  replit.md  supabase_migration_phases_1_4.sql
.agents/: agent_assets_metadata.toml
.github/workflows/: deploy.yml
artifacts/mockup-sandbox/: package-lock.json
backend/: Procfile  app.py  gunicorn.conf.py  render.yaml  requirements.txt  run.py  watchdog.py
backend/config/: landing.json
backend/db/: 2026_04_29_drop_distribuir_payout_trigger.sql  DEBUG_FIND_BUG.sql  backfill_signers_trilateral.py  migration_certificado_universal.sql  migration_contract_signers_role.sql  migration_corpo_da_obra.sql  migration_editora_agregados.sql  migration_fix_preco_minimo.sql  migration_licenciamento.sql  migration_repasses_publisher_split.sql  migration_signers_role_editora_detentora.sql  migration_signers_role_publisher.sql  migration_tsa.sql  setup_all.sql  supabase_client.py
backend/email_templates_supabase/: 1_confirmar_conta.html  2_redefinir_senha.html  3_magic_link.html  4_convite.html  5_trocar_email.html
backend/routes/: admin.py  agregados.py  ai.py  analytics.py  assinatura.py  catalogo.py  contratos_edicao.py  contratos_licenciamento.py  dossie.py  favoritos.py  financeiro.py  keep_alive.py  notificacoes.py  obras.py  perfis.py  publishers.py  saques.py  share.py  stripe_connect.py  stripe_routes.py
frontend/: index.html  package-lock.json  vercel.json
scripts/: external_pinger.py
sql/: 02_ai_capa_letra.sql  04_termos_aceitos_perfis.sql  05_seguranca_ledger_2026_04.sql  MIGRACOES_FALTANTES.sql
(+128 files in other folders)
